[package]
name = "pool"
version = "0.1.0"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

#[workspace]
#members = ["behavior"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst/"}
log = { version = "0.4.8", features = ["serde"] }
rand = "0.7.3"

[build-dependencies]
image = "0.23.0"
sheep = "0.3.0"
ron = "0.5.1"

[features]
default = ["empty"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
#nightly = ["amethyst/nightly"]

[profile.dev]
codegen-units = 48

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"